Prevented wrapping of ’Suspended’ text

--- a/src/site/core/components/MarketList/style.less
+++ b/src/site/core/components/MarketList/style.less
@@ -142,4 +142,5 @@
   align-items: center;
   border-right: 1px solid @border-2;
   text-transform: uppercase;
+  text-align: center;
 }
